# UOSM-CAN-Debugger

./: .clangd  .gitmodules  CMakeLists.txt  README.md  justfile  rp2040.cfg
inc/: MCP251XFD.h  MCP251XFD_Config.h  msg_interpreter.h  network.h
include/: Conf_MCP251XFD.h  ErrorsDef.h  MCP251XFD.h  can_driver.h
src/: MCP251XFD.c  MCP251XFD_Config.c  can_driver.c  main.c  msg_interpreter.c  network.c
